# pendulum-simulator

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/simulation/: pendulum.py
src/visualization/: config.py  render.py
